apps/web/src/app/admin/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 20 66% 99%;
    --foreground: 20 51% 4%;
    --muted: 20 25% 86%;
    /* --muted-foreground: 20 7% 25%;  */
    --muted-foreground: 20 7% 40%;
    --popover: 20 66% 98%;
    --popover-foreground: 20 51% 3%;
    --card: 20 66% 98%;
    --card-foreground: 20 51% 3%;
    --border: 20 15% 94%;
    --brand: 20 48% 72%;
    --input: 20 15% 94%;
    --primary: 20 48% 72%;
    --primary-foreground: 20 48% 12%;
    --secondary: 20 12% 92%;
    --secondary-foreground: 20 12% 32%;
    --accent: 20 12% 92%;
    --accent-foreground: 20 12% 32%;
    --destructive: 11 85% 39%;
    /* --destructive: 11 80% 22%; */
    --destructive-foreground: 11 80% 82%;
    --ring: 20 48% 72%;
    --radius: 0.5rem;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --sidebar-background: 0 0% 98%;
    --sidebar-foreground: 240 5.3% 26.1%;
    --sidebar-primary: 240 5.9% 10%;
    --sidebar-primary-foreground: 0 0% 98%;
    --sidebar-accent: 240 4.8% 95.9%;
    --sidebar-accent-foreground: 240 5.9% 10%;
    --sidebar-border: 220 13% 91%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }

  .dark {
    --background: 253 43% 3%;
    --foreground: 253 31% 98%;
    --muted: 253 7% 13%;
    --muted-foreground: 253 13% 63%;
    --popover: 253 43% 3%;
    --popover-foreground: 253 31% 98%;
    --card: 253 43% 4%;
    --card-foreground: 253 31% 99%;
    --border: 215 27.9% 16.9%;
    --brand: 253 91% 58%;
    --input: 215 27.9% 16.9%;
    --primary: 253 91% 58%;
    --primary-foreground: 253 91% 98%;
    --secondary: 253 7% 9%;
    --secondary-foreground: 253 7% 69%;
    --accent: 253 13% 14%;
    --accent-foreground: 253 13% 74%;
    --destructive: 339.2 90.36% 51.18%;
    --destructive-foreground: 0 0% 100%;
    --ring: 253 91% 58%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
    --sidebar-background: 240 5.9% 10%;
    --sidebar-foreground: 240 4.8% 95.9%;
    --sidebar-primary: 224.3 76.3% 48%;
    --sidebar-primary-foreground: 0 0% 100%;
    --sidebar-accent: 240 3.7% 15.9%;
    --sidebar-accent-foreground: 240 4.8% 95.9%;
    --sidebar-border: 240 3.7% 15.9%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply box-border bg-background text-foreground;
  }
}

@layer utilities {
  .min-h-screen {
    min-height: 100vh; /* Fallback */
    min-height: 100dvh;
  }
  .h-screen {
    height: 100vh; /* Fallback */
    height: 100dvh;
  }
}

.dark .w-color-sketch {
  --sketch-background: #323232 !important;
}

.dark .w-color-swatch {
  --sketch-swatch-border-top: 1px solid #525252 !important;
}

.dark .w-color-block {
  --block-background-color: #323232 !important;
  --block-box-shadow: rgb(0 0 0 / 10%) 0 1px !important;
}

.dark .w-color-editable-input {
  --editable-input-label-color: #757575 !important;
  --editable-input-box-shadow: #616161 0px 0px 0px 1px inset !important;
  --editable-input-color: #bbb !important;
}

.dark .w-color-github {
  --github-border: 1px solid rgba(0, 0, 0, 0.2) !important;
  --github-background-color: #323232 !important;
  --github-box-shadow: rgb(0 0 0 / 15%) 0px 3px 12px !important;
  --github-arrow-border-color: rgba(0, 0, 0, 0.15) !important;
}

.dark .w-color-compact {
  --compact-background-color: #323232 !important;
}

.dark .w-color-material {
  --material-background-color: #323232 !important;
  --material-border-bottom-color: #707070 !important;
}

.dark .w-color-alpha {
  --alpha-pointer-background-color: #6a6a6a !important;
  --alpha-pointer-box-shadow: rgb(0 0 0 / 37%) 0px 1px 4px 0px !important;
}

